--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -15,3 +15,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
+      
+    - uses: "marvinpinto/action-automatic-releases@latest" 
+      with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: bf
